--- a/Info.plist
+++ b/Info.plist
@@ -64,7 +64,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>viz.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>edu.northwestern.viz</string>
 	<key>CFBundleInfoDictionaryVersion</key>
