--- a/Info.plist
+++ b/Info.plist
@@ -66,7 +66,7 @@
 	<key>CFBundleIconFile</key>
 	<string>viz.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>edu.northwestern.viz</string>
+	<string>com.flatown.viz</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
